--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ body {
   overflow-x: hidden;
   background: #ffffff;
   color: #261911;
-  1background: #fdfcfa;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(51, 181, 229, 0);
@@ -110,8 +109,6 @@ a {
 }
 
 ul {
-  1list-style: none;
-  /*убираем маркеры списка*/
   margin: 0;
   /*убираем верхнее и нижнее поле, равное 1em*/
   padding-left: 0;
@@ -137,17 +134,19 @@ ul {
   flex-direction: row;
   align-items: center;
   height: 6.375vw;
+  justify-content: space-between;
 }
 
 .header__logo {
-  width: 11.875vw;
+  height: 1.375vw;
 }
 
 .menu__li {
   display: flex;
-  margin-left: 25.375vw;
+  margin-right: 5.275vw;
   font-size: 1.25vw;
   list-style: none;
+  justify-content: flex-end;
 }
 
 .menu__li li:not(:last-child) {
@@ -156,6 +155,7 @@ ul {
 
 .li__contact {
   color: #fdb75e;
+  text-decoration: underline;
 }
 
 .header__line {
@@ -310,7 +310,7 @@ ul {
 .recent-projects {
   background-color: #fafafa;
   padding-top: 5.3125vw;
-  padding-bottom: 1px;
+  padding-bottom: 5.3125vw;
 }
 
 .recent-projects__title {
@@ -323,12 +323,14 @@ ul {
   display: flex;
   margin-left: 19.5625vw;
   margin-right: 19.5625vw;
-  margin-bottom: 3.125vw;
   border-radius: 0.3125vw;
-
   box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
+}
+
+.recent-projects__project:not(:last-child) {
+  margin-bottom: 3.125vw;
 }
 
 .project_img {
@@ -344,6 +346,7 @@ ul {
   justify-content: center;
   align-items: flex-start;
   position: relative;
+  width: 35vw;
 }
 
 .title__type {
@@ -359,7 +362,7 @@ ul {
   white-space: nowrap;
   padding: 0.625vw;
   align-items: center;
-  right: 0px;
+  right: 1.0625vw;
 }
 
 .project__title h3 {
@@ -384,10 +387,8 @@ ul {
 }
 
 .project__title h3 {
-}
-
-.project__alaska {
-  margin-bottom: 5.3125vw;
+  font-size: 2.5vw;
+  width: auto;
 }
 
 .prices {
@@ -464,6 +465,7 @@ ul {
   height: 2.9375vw;
   align-items: center;
   justify-content: space-around;
+  cursor: pointer;
 }
 
 /* Консультирую бесплатно */
@@ -483,6 +485,7 @@ ul {
   font-weight: 300;
   font-size: 2.5vw;
   margin-right: 7vw;
+  margin-top: 0.3vw;
 }
 
 .title__free img {
@@ -602,8 +605,8 @@ ul {
 .support__description {
   font-family: "Gilroy", sans-serif;
   font-weight: 300;
-  font-size: 1.25vw;
-  margin-top: 0.4vw;32
+  font-size: 1.5625vw;
+  margin-top: 0.4vw;
 }
 
 .excretion {
@@ -639,9 +642,7 @@ ul {
   margin-bottom: 0.9375vw;
   border-radius: 0.3125vw;
   cursor: pointer;
-
   -webkit-tap-highlight-color: rgba(253, 184, 94, 0.212);
-
   box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
@@ -822,7 +823,6 @@ ul {
   width: 58.5vw;
   z-index: -1;
   border-radius: 22px;
-
   box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
@@ -852,13 +852,15 @@ ul {
 }
 
 .give-feedback__btn {
-  font-family: "AvertaDemoPE-Regular", sans-serif;
-  font-size: 1vw;
+  font-size: 1.2vw;
   margin-bottom: 2.375vw;
   border: none;
   outline: none;
   background-color: #ffffff;
   text-decoration: underline;
+  cursor: pointer;
+  font-family: "Gilroy";
+  font-weight: 500;
 }
 
 /* Обсудим Ваш проект? */
@@ -886,6 +888,20 @@ ul {
   align-items: flex-start;
   margin-top: 3.125vw;
   line-height: 108%;
+}
+
+input:focus,
+textarea:focus {
+  outline: 0;
+  outline-offset: 0;
+
+  border: 1px solid #fdb75e;
+  /* цвет обводки */
+}
+
+input:hover,
+textarea:hover {
+  cursor: pointer;
 }
 
 .form__text {
@@ -950,6 +966,7 @@ ul {
   align-items: center;
   justify-content: space-around;
   border: 0;
+  cursor: pointer;
 
   box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
   -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.07);
@@ -1009,7 +1026,6 @@ ul {
   font-family: "AvertaDemoPE-Regular", sans-serif;
   width: 400;
   font-size: 1.125vw;
-  line-height: 107.9%;
 }
 
 .contacts-form__form input {
@@ -1106,6 +1122,532 @@ ul {
   display: none;
 }
 
+/* адаптив min 1000px */
+@media (max-width: 1400px) {
+  body {
+    -moz-transform: scale(1.2) translateY(58vw) translateX(4vw);
+    -webkit-transform: scale(1.2) translateY(58vw) translateX(4vw);
+    -o-transform: scale(1.2) translateY(58vw) translateX(4vw);
+    -ms-transform: scale(1.2) translateY(58vw) translateX(4vw);
+    transform: scale(1.2) translateY(58vw) translateX(4vw);
+  }
+/* адаптив 1000px */
+
+@media (max-width: 1000px) {
+  body {
+    font-size: 1.6vw;
+
+    -moz-transform: scale(1) translateY(0);
+    -webkit-transform: scale(1) translateY(0);
+    -o-transform: scale(1) translateY(0);
+    -ms-transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0);
+  }
+
+  h2 {
+    font-size: 4vw;
+  }
+
+  h3 {
+    font-size: 2.5vw;
+  }
+
+  .wrapper {
+    padding-right: 2.2vw;
+    padding-left: 2.2vw;
+    overflow: hidden;
+  }
+
+  .hamburger-menu {
+    display: none;
+  }
+
+  .recent-projects__project_320 {
+    display: none;
+  }
+
+  .range {
+    display: none;
+  }
+
+  .slider_320 {
+    display: none;
+  }
+
+  .material-menu-wrapper {
+    display: none;
+  }
+
+  .stage__number320 {
+    display: none;
+  }
+
+  /* header 1000 */
+
+  .header__logo {
+    height: 2.2vw;
+  }
+
+  .menu__li {
+    margin-right: 7.475vw;
+    font-size: 1.6vw;
+  }
+
+  /* Разрабатываю удобный дизайн сайтов с заботой о пользователях 1000 */
+
+  .title__main-title {
+    font-size: 4.5vw;
+    margin: 8.7vw 0 3vw 0;
+  }
+
+  .title__sub-title {
+    font-size: 1.8vw;
+    margin-bottom: 3.5vw;
+    margin-right: 0vw;
+    width: 40vw;
+  }
+
+  .title__btn {
+    font-size: 2vw;
+    border-radius: 0.5vw;
+    width: 23.8vw;
+    height: 6.1vw;
+  }
+
+  .post__header-img {
+    width: 48.9vw;
+    height: 55.3vw;
+  }
+
+  .post__wb {
+    font-size: 3vw;
+    top: 21.4vw;
+  }
+
+  /* Что я делаю 1000 */
+
+  .doing {
+    margin-top: 21.9vw;
+    margin-bottom: 15vw;
+  }
+
+  .doing__title {
+    margin-bottom: 6vw;
+  }
+
+  .doing__description {
+    width: 30.6vw;
+    height: 27.8vw;
+    border-radius: 0.5vw;
+  }
+
+  .description__title {
+    margin-top: 5.6vw;
+    margin-bottom: 2.3vw;
+  }
+
+  /* Моя цель — создавать сайты 1000*/
+
+  .target {
+    margin-bottom: 15vw;
+  }
+
+  .target__description {
+    font-size: 3.5vw;
+  }
+
+  .target__icon-arrow {
+    margin-top: 16.6vw;
+    width: 4.5vw;
+  }
+
+  .target__steps p {
+    font-size: 5vw;
+  }
+
+  .target__steps p:nth-child(2) {
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+  }
+
+  /* Последние проекты 1000 */
+
+  .recent-projects {
+    padding: 8.5vw 0;
+  }
+  .recent-projects__title {
+    margin-bottom: 6vw;
+  }
+
+  .project_img {
+    width: 35.8vw;
+    margin: 2vw 3vw 2vw 2vw;
+  }
+  .project__title {
+    width: 55.2vw;
+  }
+  .title__type {
+    font-size: 1.6vw;
+    border: 0.068vw solid #fdb75e;
+    height: auto;
+    padding: 0.5vw 1.5vw;
+    margin-top: 2vw;
+    border-radius: 0.338vw;
+  }
+  .type__description {
+    font-size: 2vw;
+    margin-top: 1vw;
+    margin-bottom: 1.5vw;
+  }
+  .project__title a {
+    font-size: 2vw;
+  }
+
+  .project__title a img {
+    width: 1.1vw;
+  }
+
+  .recent-projects__project {
+    margin: 0 2vw;
+    border-radius: 0.5vw;
+  }
+  .recent-projects__project:not(:last-child) {
+    margin-bottom: 5vw;
+  }
+
+  /* Стоимость 1000 */
+  .prices {
+    margin: 15vw 0 15vw 0;
+  }
+
+  .blocks__block {
+    width: 22.3vw;
+    height: auto;
+    padding: 3.4vw 0 3.4vw 0;
+    border-radius: 0.5vw;
+  }
+
+  .block__name {
+    font-size: 2.5vw;
+    margin-bottom: 3.2vw;
+  }
+
+  .block__cost {
+    font-size: 2.5vw;
+    margin-bottom: 0.4vw;
+  }
+
+  .block__extra {
+    font-size: 1.4vw;
+    margin-bottom: 0.3vw;
+  }
+
+  .block__day {
+    font-size: 1.4vw;
+    margin-bottom: 2.4vw;
+  }
+
+  .block__description {
+    font-size: 1.4vw;
+    margin-bottom: 2.4vw;
+  }
+
+  .block__btn {
+    font-size: 1.6vw;
+    border-radius: 0.4vw;
+    width: 16.3vw;
+    height: 3.8vw;
+  }
+
+  .prices__blocks {
+    margin-top: 6vw;
+  }
+  /* Консультирую бесплатно 1000*/
+
+  .title__free {
+    font-size: 4vw;
+  }
+
+  .title__free img {
+    width: 3.1vw;
+  }
+
+  .title__description {
+    font-size: 2.5vw;
+  }
+
+  .consult__line {
+    margin-top: 2.55vw;
+    margin-bottom: 15vw;
+    width: 74.5625vw;
+  }
+
+  /* Этапы работы 1000*/
+  .stages {
+    margin-bottom: 15vw;
+  }
+  .stages__title {
+    margin-bottom: 6vw;
+  }
+
+  .group__stage {
+    width: 37.6vw;
+    border-radius: 0.5vw;
+  }
+  .group__stage:nth-child(1) {
+    margin-right: 3vw;
+    margin-bottom: 3vw;
+  }
+
+  .group__stage:nth-child(2) {
+    margin-bottom: 3vw;
+  }
+
+  .group__stage:nth-child(3) {
+    margin-right: 3vw;
+  }
+
+  .stage__number {
+    margin-right: 1.4vw;
+  }
+
+  .stage__number img {
+    width: 3.4vw;
+    margin-top: 0.1vw;
+  }
+
+  .stage__title {
+    font-size: 2.2vw;
+    margin-bottom: 1.4vw;
+  }
+
+  .stage__description {
+    font-size: 1.6vw;
+  }
+
+  .group__stage:nth-child(1) .stage__description {
+    margin-bottom: 0.8vw;
+  }
+
+  .stage__link {
+    font-size: 1.8vw;
+  }
+
+  /* Поддержка проекта 1000*/
+
+  .support__title {
+    font-size: 4vw;
+  }
+  .support__img {
+    margin-top: 1vw;
+    height: auto;
+    width: auto;
+  }
+  .support__description {
+    font-size: 2.1vw;
+    margin-top: 1.1vw;
+  }
+
+  /* Часто задаваемые вопросы 1000*/
+
+  .accordion {
+    padding: 8vw 0;
+    margin-bottom: 15vw;
+  }
+
+  .accordion__title {
+    margin-bottom: 6.3vw;
+  }
+
+  .accordion__item {
+    width: 58.2vw;
+    padding: 1.7vw 0 1.7vw 3.9vw;
+    border-radius: 0.4vw;
+    margin-bottom: 1.5vw;
+  }
+
+  .accordion__item::before {
+    width: 2vw;
+    height: 2vw;
+    top: 3vw;
+  }
+
+  .item1__title {
+    font-size: 2vw;
+  }
+
+  .item__content {
+    font-size: 1.5vw;
+  }
+
+  .item__title {
+    font-size: 2vw;
+  }
+
+  /* Отзывы заказчиков 1000*/
+
+  .feedback {
+    margin-bottom: 9vw;
+  }
+  .accent {
+  }
+  .bg_cont {
+    left: 17.9vw;
+    top: 40.8vw;
+  }
+  .bg {
+    width: 93.6vw;
+  }
+  .slider {
+    margin-bottom: 7.5vw;
+    margin-left: 5vw;
+  }
+  .slider__item {
+  }
+  .feedback-img {
+    width: 58.2vw;
+    margin: 0 -1vw 0 -1vw;
+  }
+  .flex {
+    margin-bottom: 15vw;
+    margin-left: 22vw;
+  }
+  .give-feedback {
+    width: 26.1vw;
+    height: auto;
+    border-radius: 0.5vw;
+    padding-top: 3.9vw;
+  }
+  .give-feedback__title {
+    font-size: 2vw;
+    margin-bottom: 2.5vw;
+  }
+  .give-feedback__btn {
+    font-size: 1.6vw;
+    margin-bottom: 3.9vw;
+  }
+  .slider .slick-arrow.slick-prev {
+    left: -3vw;
+  }
+
+  /* Обсудим Ваш проект? 1000*/
+
+  .contact_block {
+    padding: 8.6vw 0 6.4vw 2vw;
+  }
+  .contacts-form {
+  }
+  .contacts-form__title {
+    font-size: 4vw;
+  }
+  .accent {
+  }
+  .contacts-form__form {
+    margin-top: 3.3vw;
+  }
+  .form__text {
+    width: 42.4vw;
+    height: 5.8vw;
+    margin-bottom: 1.3vw;
+    border-radius: 0.4vw;
+  }
+  .form__email {
+    width: 42.4vw;
+    height: 5.8vw;
+    margin-bottom: 1.3vw;
+    border-radius: 0.4vw;
+  }
+  .form__msg {
+    width: 40.7vw;
+    min-height: 13.3vw;
+    margin-bottom: 1.3vw;
+    border-radius: 0.4vw;
+  }
+  .contacts-form__form textarea,
+  .contacts-form__form textarea {
+    font-size: 1.6vw;
+  }
+
+  .contacts-form__form input::placeholder,
+  .contacts-form__form textarea::placeholder {
+    font-family: "AvertaDemoPE-Regular", sans-serif;
+    width: 400;
+    font-size: 1.6vw;
+  }
+  .form__policy {
+    margin: 0;
+    font-size: 1.4vw;
+  }
+  .form__link {
+    font-size: 1.4vw;
+    margin-bottom: 1.6vw;
+  }
+  .form__btn {
+    font-size: 2vw;
+    border-radius: 0.4vw;
+    width: 42.4vw;
+    height: 5.8vw;
+  }
+  .contact-information {
+    margin-left: 10vw;
+    margin-top: 9.5vw;
+  }
+  .contact-information__title {
+    font-size: 3.2vw;
+    margin-bottom: 1.7vw;
+  }
+  .contact-information__content {
+    font-size: 1.8vw;
+  }
+  .contact-information__social {
+    margin-top: 2vw;
+  }
+  .contact-information__social img {
+    width: 3.8vw;
+    margin: 0 1.5vw 0 1.5vw;
+  }
+  .contact-information__mail {
+    font-size: 1.8vw;
+    margin-top: 2.1vw;
+  }
+
+  /* footer 1000*/
+
+  .wrapper {
+    padding-right: 2vw;
+    padding-left: 2vw;
+  }
+  .footer {
+    padding-left: 2vw;
+  }
+  .footer__logo {
+    height: 1.6vw;
+  }
+  .footer__menu {
+  }
+  .footer__menu__ul {
+    margin-left: 6.7vw;
+    font-size: 1.4vw;
+    margin-right: 8vw;
+  }
+  .current {
+  }
+  .footer__link {
+    font-size: 1.3vw;
+    margin-right: 2.4vw;
+  }
+  .footer__copyright {
+    font-size: 1.4vw;
+  }
+  .copyright {
+  }
+  .accent {
+  }
+  .footer__heart {
+    width: 1.6vw;
+    height: auto;
+  }
+}
 /* адаптив 6.25vw -------------------------------------------------*/
 
 @media (max-width: 480px) {
@@ -1116,6 +1658,10 @@ ul {
   }
 
   .line {
+    display: none;
+  }
+
+  .title__free img {
     display: none;
   }
 
@@ -1585,13 +2131,13 @@ ul {
   .recent-projects__project_320 .project__title .type__description {
     font-size: 4.6875vw;
     margin-top: 4.375vw;
-    /* width: 67.3vw; */
+    width: 67.3vw;
   }
 
   .recent-projects__project_320 .project__title a {
     font-size: 5.3125vw;
     position: absolute;
-    top: 69vw;
+    top: 90vw;
   }
 
   .recent-projects__project_320 .project__title a img {
@@ -1608,6 +2154,7 @@ ul {
     padding: 3.625vw;
     justify-content: flex-start;
     margin: 7.5vw 0 0 0;
+    margin-left: 1vw;
   }
 
   /* Стоимость 320*/
@@ -1808,7 +2355,7 @@ ul {
   .accordion__item {
     min-height: 16.5625vw;
     width: 87.5vw;
-    font-size: 4.375vw;
+    /* font-size: 4.375vw; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -1821,6 +2368,7 @@ ul {
   .item1__title {
     margin-left: 4.6875vw;
     margin-right: 31.25vw;
+    font-size: 4.4vw;
   }
 
   .item__content {
@@ -1831,6 +2379,7 @@ ul {
   .item__title {
     margin-left: 4.6875vw;
     margin-right: 31.25vw;
+    font-size: 4.4vw;
   }
 
   .accordion__item::before {
