--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,8 @@ ul {
   /*убираем левый отступ, равный 40px*/
 }
 
+
+
 .accent {
   color: #fdb75e;
 }
@@ -1122,8 +1124,127 @@ textarea:hover {
   display: none;
 }
 
+/* popup */
+
+.hide {
+  display: none;
+}
+
+.button {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  padding: 5px 10px;
+  border: 1px solid #aaa;
+  background-color: #eee;
+  background-image: linear-gradient(top, #fff, #f0f0f0);
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  color: #666;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #fff;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+
+.button:hover {
+  border-color: #999;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+.button:active {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  transition: opacity 200ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.overlay.light {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.overlay .cancel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: default;
+}
+
+#p1:checked~#popup1.overlay {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+}
+
+#p2:checked~#popup2.overlay {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+}
+
+.popup {
+  margin: 75px auto;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #666;
+  width: 300px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.light .popup {
+  border-color: #aaa;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #666;
+  font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
+}
+
+.popup .close {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 20px;
+  right: 20px;
+  opacity: 0.8;
+  transition: all 200ms;
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #666;
+  cursor: pointer;
+}
+
+.popup .close:hover {
+  opacity: 1;
+}
+
+.popup .content {
+  max-height: 400px;
+  overflow: auto;
+}
+
+.popup p {
+  margin: 0 0 1em;
+}
+
+.popup p:last-child {
+  margin: 0;
+}
+
 /* адаптив min 1000px */
-@media (max-width: 1400px) {
+/* @media (max-width: 1400px) {
   body {
     -moz-transform: scale(1.2) translateY(58vw) translateX(4vw);
     -webkit-transform: scale(1.2) translateY(58vw) translateX(4vw);
@@ -1131,17 +1252,19 @@ textarea:hover {
     -ms-transform: scale(1.2) translateY(58vw) translateX(4vw);
     transform: scale(1.2) translateY(58vw) translateX(4vw);
   }
+} */
+
 /* адаптив 1000px */
 
 @media (max-width: 1000px) {
   body {
     font-size: 1.6vw;
 
-    -moz-transform: scale(1) translateY(0);
+    /* -moz-transform: scale(1) translateY(0);
     -webkit-transform: scale(1) translateY(0);
     -o-transform: scale(1) translateY(0);
     -ms-transform: scale(1) translateY(0);
-    transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0); */
   }
 
   h2 {
